--- a/android/app/src/main/res/layout/item_message.xml
+++ b/android/app/src/main/res/layout/item_message.xml
@@ -45,7 +45,7 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:text="20:43" />
 
-    <TextView
+    <us.feras.mdv.MarkdownView
         android:id="@+id/tv_message"
         fontPath="@string/font_lato_regular"
         android:layout_width="0dp"
